[package]
name = "raspi-cam"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
libcamera = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yuvutils-rs = { version = "0.8", features = ["rayon"] }
image = "0.25"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
futures-util = "0.3"
turbojpeg = "1.3"

[profile.release]
debug = 0
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1